# star-slide

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  Readme_en.md  pyproject.toml
.github/workflows/: ci.yml
.session/: CONTINUITY.md
data/labels/notebooklm/: H1_PRIORITY_TRACKING.md  LABELING_GUIDE.md  sample1_slide01.json  sample1_slide02.json  sample1_slide03.json  sample1_slide04.json  sample1_slide05.json  sample1_slide06.json  sample1_slide07.json  sample1_slide08.json  sample1_slide09.json  sample1_slide10.json  sample1_slide11.json  sample1_slide12.json  sample1_slide13.json  sample1_slide14.json  (+13 more)
docs/: Layered-Slide-Object-Extraction-Research-2026.md  NotebookLM-Single-Image-Reconstruction-Option.md  Star-SlideEditor.md  Star-SlideMaster_PRD_manus.md  Star-Slide_Codex-ImageGen-TextRemoval-Findings-2026.md  Star-Slide_DevPlan.md  Star-Slide_PRD.md  Star-Slide_Pipeline-Optimization-2026.md  Star-Slide_Structure.md  Star-Slide_TechDecisions.md  star-slidemanager-prd_claude.md
docs/plans/: 2026-04-27-webapp-security-hardening-plan.md  2026-04-27-webapp-uiux-improvements-plan.md
experiments/diagram_split/: poc_v1_text_object_split.py  poc_v2_text_object_split.py  poc_v3_layered.py  poc_v4_sam2_objects.py  poc_v5_hierarchical.py  poc_v6_visual_fidelity.py  v7_step2a_fill_bg.py  v7_step3_sam2_clean.py  v7_step4_compose.py
experiments/h1_sam31/: REPORT.md  run_h1.py
experiments/h1_sam3_box/: poc.py
experiments/h2_custgeom/: REPORT.md  run_h2.py  shapes.py
experiments/h3_ocr/: REPORT.md  run_h3.py
output/: README.md
scripts/: apply_raster_groups_to_layout.py  apply_sam3_box_to_raster_groups.py  backfill_thumbnails.py  detect_raster_groups.py  gemini_vision_smoke.py  generate_layout_batch.py  generate_layout_json.py  layout_qa.py  proxy_vision_smoke.py  reconstruct_from_layout.py
star_slide/: __init__.py  _version.py  config.py
star_slide/api/: __init__.py  events.py  preview_assets.py  web_app.py
star_slide/audit/: __init__.py
star_slide/chart/: __init__.py
star_slide/classify/: __init__.py
star_slide/cli/: __init__.py  convert.py  label.py  main.py  notebooklm.py  web.py
star_slide/composer/: __init__.py  inject.py  svg2custgeom.py  vectorize.py  vtracer_wrapper.py
star_slide/db/: __init__.py
star_slide/font/: __init__.py
star_slide/inpaint/: __init__.py  lama.py
star_slide/input/: __init__.py  pptx_extractor.py  validator.py  watermark_remover.py
star_slide/ocr/: __init__.py  metrics.py  paddleocr_worker.py  text_attributes.py
star_slide/pipeline/: __init__.py  codex_image_split.py  notebooklm_auto.py  orchestrator.py
star_slide/qa/: __init__.py
star_slide/rasterize/: __init__.py  coords.py  libreoffice.py
star_slide/schema/: __init__.py  enums.py  layer.py
star_slide/segmentation/: __init__.py  classify.py  iou.py  loader.py  sam2_auto.py  sam3.py
star_slide/table/: __init__.py
star_slide/vision_llm/: __init__.py  extractor.py  image_split_client.py  schema.py
star_slide/workers/: __init__.py
tests/: conftest.py
tests/integration/: test_web_app.py
tests/unit/: test_apply_raster_groups_to_layout.py  test_classify.py  test_coords.py  test_generate_layout_batch.py  test_generate_layout_json.py  test_input_validator.py  test_iou.py  test_metrics.py  test_notebooklm_hierarchical_overlay.py  test_notebooklm_image_split_runtime.py  test_notebooklm_selection.py  test_smoke.py  test_svg2custgeom.py  test_text_attributes.py  test_vision_llm.py  test_vtracer_wrapper.py  test_watermark_remover.py
(+6 files in other folders)
