[project]
name = "star-slide"
version = "0.1.0"
description = "AI 슬라이드 이미지를 편집 가능 PPTX로 역변환하는 후처리 엔진"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Starhunter" }]
keywords = ["pptx", "slides", "ai", "ocr", "segmentation", "powerpoint", "korean"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
]

dependencies = [
    "python-pptx>=1.0.2",
    "pdf2image>=1.17.0",
    "pillow>=10.4.0",
    "numpy>=1.26.4",
    "lxml>=5.3.0",
    "svg.path>=6.3",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "typer>=0.12.5",
    "rich>=13.7.0",
    "scikit-image>=0.22.0",
]

[project.optional-dependencies]
gpu-segmentation = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.40.0",
]
ocr = [
    "paddleocr>=2.9.0",
]
gpu-inpaint = [
    "torch>=2.6.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "celery[redis]>=5.4.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
]

[project.scripts]
star-slide = "star_slide.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["star_slide"]

# === Ruff ===
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "experiments", "data"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF",
]
ignore = [
    "E501",  # line too long (formatter handles)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "S101"]
"experiments/**" = ["E", "F", "I"]
"star_slide/cli/**" = ["B008"]  # typer.Argument/Option은 default에서 호출

# === Mypy ===
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
exclude = ["experiments/", "data/", ".venv/"]

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "pdf2image.*",
    "paddleocr.*",
    "skimage.*",
    "skimage.metrics.*",
    "svg.path.*",
    "simple_lama_inpainting.*",
]
ignore_missing_imports = true

# === Pytest ===
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "gpu: tests requiring GPU",
    "slow: tests > 5s",
    "e2e: end-to-end tests",
    "integration: integration tests",
]
asyncio_mode = "auto"

# === Coverage ===
[tool.coverage.run]
source = ["star_slide"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
